# dj-translation-cli

./: README.md  django_translate.sh  pyproject.toml  translate.py  utils.py
